--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"Node3D",
+"class": &"AttackManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/AttackManager.gd"
+}, {
 "base": &"Resource",
 "class": &"InputAction",
 "icon": "",
