--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,4 +1,7 @@
 [selected_history]
 
-InputAction=PackedStringArray("uid://b8i8mb41d8u15", "uid://fs1c3t8g02pw", "uid://dra1fmhuuyh2p", "uid://cno01tioifdju", "uid://dvuud1kxhl1k1", "uid://d1im72y63x88v")
+InputAction=PackedStringArray("uid://tqij44h7k18x", "uid://b8i8mb41d8u15", "uid://fs1c3t8g02pw", "uid://dvuud1kxhl1k1", "uid://d1im72y63x88v")
 RMovementState=PackedStringArray("uid://4hd8qcllk0te", "uid://btrr2fj0icgc7", "uid://dt02hjqrkha")
+Animation=PackedStringArray("uid://fi3wdcise6i7", "uid://bnx4gk7ruismj")
+RComboAttackNode=PackedStringArray("uid://dtn1ypsx6wnmd", "uid://dmyjpsya3wsp1")
+RComboAttack=PackedStringArray("uid://cdxllkv0s4hh6")
